# glitch-hs

./: README.md  glitch.cabal  stack.yaml
src/: Main.hs
