name:                glitch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rischev/glitch#readme
license:             BSD3
--license-file:        LICENSE
author:              Roman Barnoul
maintainer:          romanscherbakov.i@gmail.com
copyright:           None
category:            Imaging
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable glitch
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hip == 1.5.6.0

